src/timeline/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    COLOR
    COMMENT
    EQUALS
    INT
    START_SECTION
    START_THREAD
    TIMEUNIT

Grammar

Rule 0     S' -> expression
Rule 1     expression -> point
Rule 2     expression -> interval
Rule 3     expression -> thread
Rule 4     expression -> section
Rule 5     expression -> chart
Rule 6     expression -> source
Rule 7     expression -> import
Rule 8     source -> SOURCE
Rule 9     import -> IMPORT
Rule 10    temp_chart -> BEGIN section
Rule 11    temp_chart -> BEGIN source
Rule 12    temp_chart -> temp_chart section
Rule 13    chart -> temp_chart END
Rule 14    temp_section -> SECTION SYMBOL_NAME
Rule 15    temp_section -> SECTION SYMBOL_NAME PARAMETER
Rule 16    temp_section -> temp_section thread
Rule 17    temp_section -> temp_section import
Rule 18    section -> temp_section
Rule 19    temp_thread -> THREAD SYMBOL_NAME
Rule 20    temp_thread -> THREAD SYMBOL_NAME PARAMETER
Rule 21    temp_thread -> temp_thread point
Rule 22    temp_thread -> temp_thread interval
Rule 23    thread -> temp_thread
Rule 24    point -> SYMBOL_NAME ASSIGN DATE
Rule 25    point -> SYMBOL_NAME ASSIGN DATE PARAMETER
Rule 26    interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE
Rule 27    interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER

Terminals, with rules where they appear

ADD                  : 
ASSIGN               : 24 25 26 27
BEGIN                : 10 11
COLOR                : 
COMMENT              : 
DATE                 : 24 25 26 26 27 27
END                  : 13
EQUALS               : 
IMPORT               : 9
INT                  : 
PARAMETER            : 15 20 25 27
RANGE                : 26 27
SECTION              : 14 15
SOURCE               : 8
START_SECTION        : 
START_THREAD         : 
SYMBOL_NAME          : 14 15 19 20 24 25 26 27
THREAD               : 19 20
TIMEUNIT             : 
error                : 

Nonterminals, with rules where they appear

chart                : 5
expression           : 0
import               : 7 17
interval             : 2 22
point                : 1 21
section              : 4 10 12
source               : 6 11
temp_chart           : 12 13
temp_section         : 16 17 18
temp_thread          : 21 22 23
thread               : 3 16

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . point
    (2) expression -> . interval
    (3) expression -> . thread
    (4) expression -> . section
    (5) expression -> . chart
    (6) expression -> . source
    (7) expression -> . import
    (24) point -> . SYMBOL_NAME ASSIGN DATE
    (25) point -> . SYMBOL_NAME ASSIGN DATE PARAMETER
    (26) interval -> . SYMBOL_NAME ASSIGN DATE RANGE DATE
    (27) interval -> . SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER
    (23) thread -> . temp_thread
    (18) section -> . temp_section
    (13) chart -> . temp_chart END
    (8) source -> . SOURCE
    (9) import -> . IMPORT
    (19) temp_thread -> . THREAD SYMBOL_NAME
    (20) temp_thread -> . THREAD SYMBOL_NAME PARAMETER
    (21) temp_thread -> . temp_thread point
    (22) temp_thread -> . temp_thread interval
    (14) temp_section -> . SECTION SYMBOL_NAME
    (15) temp_section -> . SECTION SYMBOL_NAME PARAMETER
    (16) temp_section -> . temp_section thread
    (17) temp_section -> . temp_section import
    (10) temp_chart -> . BEGIN section
    (11) temp_chart -> . BEGIN source
    (12) temp_chart -> . temp_chart section

    SYMBOL_NAME     shift and go to state 9
    SOURCE          shift and go to state 13
    IMPORT          shift and go to state 14
    THREAD          shift and go to state 15
    SECTION         shift and go to state 16
    BEGIN           shift and go to state 17

    expression                     shift and go to state 1
    point                          shift and go to state 2
    interval                       shift and go to state 3
    thread                         shift and go to state 4
    section                        shift and go to state 5
    chart                          shift and go to state 6
    source                         shift and go to state 7
    import                         shift and go to state 8
    temp_thread                    shift and go to state 10
    temp_section                   shift and go to state 11
    temp_chart                     shift and go to state 12

state 1

    (0) S' -> expression .



state 2

    (1) expression -> point .

    $end            reduce using rule 1 (expression -> point .)


state 3

    (2) expression -> interval .

    $end            reduce using rule 2 (expression -> interval .)


state 4

    (3) expression -> thread .

    $end            reduce using rule 3 (expression -> thread .)


state 5

    (4) expression -> section .

    $end            reduce using rule 4 (expression -> section .)


state 6

    (5) expression -> chart .

    $end            reduce using rule 5 (expression -> chart .)


state 7

    (6) expression -> source .

    $end            reduce using rule 6 (expression -> source .)


state 8

    (7) expression -> import .

    $end            reduce using rule 7 (expression -> import .)


state 9

    (24) point -> SYMBOL_NAME . ASSIGN DATE
    (25) point -> SYMBOL_NAME . ASSIGN DATE PARAMETER
    (26) interval -> SYMBOL_NAME . ASSIGN DATE RANGE DATE
    (27) interval -> SYMBOL_NAME . ASSIGN DATE RANGE DATE PARAMETER

    ASSIGN          shift and go to state 18


state 10

    (23) thread -> temp_thread .
    (21) temp_thread -> temp_thread . point
    (22) temp_thread -> temp_thread . interval
    (24) point -> . SYMBOL_NAME ASSIGN DATE
    (25) point -> . SYMBOL_NAME ASSIGN DATE PARAMETER
    (26) interval -> . SYMBOL_NAME ASSIGN DATE RANGE DATE
    (27) interval -> . SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER

    $end            reduce using rule 23 (thread -> temp_thread .)
    IMPORT          reduce using rule 23 (thread -> temp_thread .)
    THREAD          reduce using rule 23 (thread -> temp_thread .)
    END             reduce using rule 23 (thread -> temp_thread .)
    SECTION         reduce using rule 23 (thread -> temp_thread .)
    SYMBOL_NAME     shift and go to state 9

    point                          shift and go to state 19
    interval                       shift and go to state 20

state 11

    (18) section -> temp_section .
    (16) temp_section -> temp_section . thread
    (17) temp_section -> temp_section . import
    (23) thread -> . temp_thread
    (9) import -> . IMPORT
    (19) temp_thread -> . THREAD SYMBOL_NAME
    (20) temp_thread -> . THREAD SYMBOL_NAME PARAMETER
    (21) temp_thread -> . temp_thread point
    (22) temp_thread -> . temp_thread interval

    $end            reduce using rule 18 (section -> temp_section .)
    END             reduce using rule 18 (section -> temp_section .)
    SECTION         reduce using rule 18 (section -> temp_section .)
    IMPORT          shift and go to state 14
    THREAD          shift and go to state 15

    thread                         shift and go to state 21
    import                         shift and go to state 22
    temp_thread                    shift and go to state 10

state 12

    (13) chart -> temp_chart . END
    (12) temp_chart -> temp_chart . section
    (18) section -> . temp_section
    (14) temp_section -> . SECTION SYMBOL_NAME
    (15) temp_section -> . SECTION SYMBOL_NAME PARAMETER
    (16) temp_section -> . temp_section thread
    (17) temp_section -> . temp_section import

    END             shift and go to state 23
    SECTION         shift and go to state 16

    section                        shift and go to state 24
    temp_section                   shift and go to state 11

state 13

    (8) source -> SOURCE .

    $end            reduce using rule 8 (source -> SOURCE .)
    END             reduce using rule 8 (source -> SOURCE .)
    SECTION         reduce using rule 8 (source -> SOURCE .)


state 14

    (9) import -> IMPORT .

    $end            reduce using rule 9 (import -> IMPORT .)
    IMPORT          reduce using rule 9 (import -> IMPORT .)
    THREAD          reduce using rule 9 (import -> IMPORT .)
    END             reduce using rule 9 (import -> IMPORT .)
    SECTION         reduce using rule 9 (import -> IMPORT .)


state 15

    (19) temp_thread -> THREAD . SYMBOL_NAME
    (20) temp_thread -> THREAD . SYMBOL_NAME PARAMETER

    SYMBOL_NAME     shift and go to state 25


state 16

    (14) temp_section -> SECTION . SYMBOL_NAME
    (15) temp_section -> SECTION . SYMBOL_NAME PARAMETER

    SYMBOL_NAME     shift and go to state 26


state 17

    (10) temp_chart -> BEGIN . section
    (11) temp_chart -> BEGIN . source
    (18) section -> . temp_section
    (8) source -> . SOURCE
    (14) temp_section -> . SECTION SYMBOL_NAME
    (15) temp_section -> . SECTION SYMBOL_NAME PARAMETER
    (16) temp_section -> . temp_section thread
    (17) temp_section -> . temp_section import

    SOURCE          shift and go to state 13
    SECTION         shift and go to state 16

    section                        shift and go to state 27
    source                         shift and go to state 28
    temp_section                   shift and go to state 11

state 18

    (24) point -> SYMBOL_NAME ASSIGN . DATE
    (25) point -> SYMBOL_NAME ASSIGN . DATE PARAMETER
    (26) interval -> SYMBOL_NAME ASSIGN . DATE RANGE DATE
    (27) interval -> SYMBOL_NAME ASSIGN . DATE RANGE DATE PARAMETER

    DATE            shift and go to state 29


state 19

    (21) temp_thread -> temp_thread point .

    SYMBOL_NAME     reduce using rule 21 (temp_thread -> temp_thread point .)
    $end            reduce using rule 21 (temp_thread -> temp_thread point .)
    IMPORT          reduce using rule 21 (temp_thread -> temp_thread point .)
    THREAD          reduce using rule 21 (temp_thread -> temp_thread point .)
    END             reduce using rule 21 (temp_thread -> temp_thread point .)
    SECTION         reduce using rule 21 (temp_thread -> temp_thread point .)


state 20

    (22) temp_thread -> temp_thread interval .

    SYMBOL_NAME     reduce using rule 22 (temp_thread -> temp_thread interval .)
    $end            reduce using rule 22 (temp_thread -> temp_thread interval .)
    IMPORT          reduce using rule 22 (temp_thread -> temp_thread interval .)
    THREAD          reduce using rule 22 (temp_thread -> temp_thread interval .)
    END             reduce using rule 22 (temp_thread -> temp_thread interval .)
    SECTION         reduce using rule 22 (temp_thread -> temp_thread interval .)


state 21

    (16) temp_section -> temp_section thread .

    IMPORT          reduce using rule 16 (temp_section -> temp_section thread .)
    THREAD          reduce using rule 16 (temp_section -> temp_section thread .)
    $end            reduce using rule 16 (temp_section -> temp_section thread .)
    END             reduce using rule 16 (temp_section -> temp_section thread .)
    SECTION         reduce using rule 16 (temp_section -> temp_section thread .)


state 22

    (17) temp_section -> temp_section import .

    IMPORT          reduce using rule 17 (temp_section -> temp_section import .)
    THREAD          reduce using rule 17 (temp_section -> temp_section import .)
    $end            reduce using rule 17 (temp_section -> temp_section import .)
    END             reduce using rule 17 (temp_section -> temp_section import .)
    SECTION         reduce using rule 17 (temp_section -> temp_section import .)


state 23

    (13) chart -> temp_chart END .

    $end            reduce using rule 13 (chart -> temp_chart END .)


state 24

    (12) temp_chart -> temp_chart section .

    END             reduce using rule 12 (temp_chart -> temp_chart section .)
    SECTION         reduce using rule 12 (temp_chart -> temp_chart section .)


state 25

    (19) temp_thread -> THREAD SYMBOL_NAME .
    (20) temp_thread -> THREAD SYMBOL_NAME . PARAMETER

    SYMBOL_NAME     reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    $end            reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    IMPORT          reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    THREAD          reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    END             reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    SECTION         reduce using rule 19 (temp_thread -> THREAD SYMBOL_NAME .)
    PARAMETER       shift and go to state 30


state 26

    (14) temp_section -> SECTION SYMBOL_NAME .
    (15) temp_section -> SECTION SYMBOL_NAME . PARAMETER

    IMPORT          reduce using rule 14 (temp_section -> SECTION SYMBOL_NAME .)
    THREAD          reduce using rule 14 (temp_section -> SECTION SYMBOL_NAME .)
    $end            reduce using rule 14 (temp_section -> SECTION SYMBOL_NAME .)
    END             reduce using rule 14 (temp_section -> SECTION SYMBOL_NAME .)
    SECTION         reduce using rule 14 (temp_section -> SECTION SYMBOL_NAME .)
    PARAMETER       shift and go to state 31


state 27

    (10) temp_chart -> BEGIN section .

    END             reduce using rule 10 (temp_chart -> BEGIN section .)
    SECTION         reduce using rule 10 (temp_chart -> BEGIN section .)


state 28

    (11) temp_chart -> BEGIN source .

    END             reduce using rule 11 (temp_chart -> BEGIN source .)
    SECTION         reduce using rule 11 (temp_chart -> BEGIN source .)


state 29

    (24) point -> SYMBOL_NAME ASSIGN DATE .
    (25) point -> SYMBOL_NAME ASSIGN DATE . PARAMETER
    (26) interval -> SYMBOL_NAME ASSIGN DATE . RANGE DATE
    (27) interval -> SYMBOL_NAME ASSIGN DATE . RANGE DATE PARAMETER

    $end            reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    SYMBOL_NAME     reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    IMPORT          reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    THREAD          reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    END             reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    SECTION         reduce using rule 24 (point -> SYMBOL_NAME ASSIGN DATE .)
    PARAMETER       shift and go to state 32
    RANGE           shift and go to state 33


state 30

    (20) temp_thread -> THREAD SYMBOL_NAME PARAMETER .

    SYMBOL_NAME     reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)
    $end            reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)
    IMPORT          reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)
    THREAD          reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)
    END             reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)
    SECTION         reduce using rule 20 (temp_thread -> THREAD SYMBOL_NAME PARAMETER .)


state 31

    (15) temp_section -> SECTION SYMBOL_NAME PARAMETER .

    IMPORT          reduce using rule 15 (temp_section -> SECTION SYMBOL_NAME PARAMETER .)
    THREAD          reduce using rule 15 (temp_section -> SECTION SYMBOL_NAME PARAMETER .)
    $end            reduce using rule 15 (temp_section -> SECTION SYMBOL_NAME PARAMETER .)
    END             reduce using rule 15 (temp_section -> SECTION SYMBOL_NAME PARAMETER .)
    SECTION         reduce using rule 15 (temp_section -> SECTION SYMBOL_NAME PARAMETER .)


state 32

    (25) point -> SYMBOL_NAME ASSIGN DATE PARAMETER .

    $end            reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)
    SYMBOL_NAME     reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)
    IMPORT          reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)
    THREAD          reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)
    END             reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)
    SECTION         reduce using rule 25 (point -> SYMBOL_NAME ASSIGN DATE PARAMETER .)


state 33

    (26) interval -> SYMBOL_NAME ASSIGN DATE RANGE . DATE
    (27) interval -> SYMBOL_NAME ASSIGN DATE RANGE . DATE PARAMETER

    DATE            shift and go to state 34


state 34

    (26) interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .
    (27) interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE . PARAMETER

    $end            reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    SYMBOL_NAME     reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    IMPORT          reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    THREAD          reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    END             reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    SECTION         reduce using rule 26 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE .)
    PARAMETER       shift and go to state 35


state 35

    (27) interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .

    $end            reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)
    SYMBOL_NAME     reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)
    IMPORT          reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)
    THREAD          reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)
    END             reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)
    SECTION         reduce using rule 27 (interval -> SYMBOL_NAME ASSIGN DATE RANGE DATE PARAMETER .)

